<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AHN</string>
	<string name="information_activity_title">Informatie</string>
	<string name="country_code">NL</string>
	
	<string name="action_layers">Kaartlagen</string>
	<string name="action_legend">Legenda</string>
	<string name="action_myposition">Zoom naar mijn locatie</string>
	<string name="action_info">Informatie</string>
	<string name="action_search">Zoek locatie</string>
	<string name="action_share_map">Deel kaart</string>
	<string name="action_elevation_profile">Maak hoogteprofiel</string>
	
	<string name="permission_rationale_location">Toegang tot je huidige locatie wordt gevraagd om op de kaart snel naar je huidige locatie te kunnen zoomen.</string>
    <string name="location_permission_denied">Je locatie is noodzakelijk voor deze app. Als je je locatie permanent niet hebt toegestaan, kun je dit herstellen via Systeeminstellingen &gt; Apps &gt; \'AHN\'.</string>
    <string name="permission_required_toast">Je locatie is noodzakelijk voor deze app.</string>
	
	<string name="SHARED_PREFERENCES_FILENAME">ahn_shared_preferences_filename</string>
	<string name="PREFERENCES_KEY_SHOW_ONBOARDING_SCREEN">preferences_key_show_onboarding_screen</string>
	
	<string name="share_image_mime_type">image/png</string>
    <string name="share_data_mime_type">text/csv</string>
    <string name="share_map_image_path">/hoogtekaart.png</string>
	<string name="share_chart_image_path">/hoogteprofiel.png</string>
	<string name="share_table_path">/hoogteprofiel.csv</string>
	<string name="files_authority">nl.waywayway.ahn.fileprovider</string>

    <string name="table_column_label_1">Afstand (m)</string>
    <string name="table_column_label_2">Hoogte (m +/- NAP)</string>
	<string name="table_column_label_3">Lengtegraad</string>
	<string name="table_column_label_4">Breedtegraad</string>

	<string name="dialog_confirm_action_body_text">Verwijder alle punten?</string>
	<string name="dialog_confirm_action_yes">Ja</string>
	<string name="dialog_confirm_action_no">Nee</string>
	
	<string name="marker_title">Hoogte</string>
	<string name="not_available_UI">n/a</string>
	<string name="unit_of_measurement_UI">meter NAP</string>
	<string name="opacity_seekbar_description">Zichtbaar</string>
	<string name="ahn1_short_title">AHN 1 - maaiveld</string>
	
	<string name="not_connected_message">Geen netwerkverbinding: sommige functies werken niet</string>
	<string name="device_location_not_available_message">Je locatie is nu niet beschikbaar</string>
	<string name="no_image_for_sharing_available_message">Geen afbeelding om te delen</string>
    <string name="no_data_for_sharing_available_message">Geen data om te delen</string>
    <string name="place_search_not_available_message">Locatiezoeker nu niet beschikbaar</string>
	<string name="make_layer_with_altitude_visible_message">Maak eerst een kaartlaag met hoogte zichtbaar in het lagenmenu</string>
	<string name="download_error_message">Download niet gelukt</string>
	<string name="no_elevation_points">Geen hoogten gevonden voor de getekende lijn</string>
	<string name="missing_elevation_points">Hoogte niet voor de hele getekende lijn beschikbaar</string>
	<string name="chart_data_label">Y: Hoogte in meters +/- NAP, X: Afstand in meters</string>
	
	<!-- onboarding slideshow -->
	<string name="ob_get_started">START</string>
    <string name="ob_header1">BEKIJK DE HOOGTEKAART</string>
	<string name="ob_desc1">Zoom ver in om de hoogtekaart in beeld te krijgen</string>
    <string name="ob_header2">VIND EEN LOCATIE</string>
	<string name="ob_desc2">Begin te typen in de zoekbalk of zoom naar je huidige locatie</string>
    <string name="ob_header3">BEKIJK DE HOOGTE VAN EEN PUNT</string>
	<string name="ob_desc3">Tik op de kaart om de hoogte ten opzichte van NAP op te vragen</string>
	<string name="ob_header4">MAAK EEN HOOGTEPROFIEL</string>
	<string name="ob_desc4">Maak eenvoudig een grafiek van de hoogte en exporteer de tabel naar Excel</string>
	<string name="ob_header5">AHN 3 NOG NIET LANDSDEKKEND</string>
	<string name="ob_desc5">AHN 2 bestrijkt heel Nederland, AHN 3 is nog niet voor heel Nederland gereed</string>
</resources>
